syntax = "proto3";

option go_package = "Chitty-Chat_HW3_V2/chittychatpb";

service ChittyChat {
  // A client sends a message to the chat
  rpc PublishMessage (ChatMessage) returns (Empty);

  // A client receives broadcasted messages
  rpc BroadcastMessages (Empty) returns (stream BroadcastMessage);

  // A client joins the chat
  rpc JoinChat (Participant) returns (JoinLeaveResponse);

  // A client leaves the chat
  rpc LeaveChat (Participant) returns (JoinLeaveResponse);
}

// Message a client sends to the chat
message ChatMessage {
  string participant = 1;
  string message = 2;
  int64 timestamp = 3;  // Logical time (Lamport timestamp)
}

// Message broadcasted to all clients
message BroadcastMessage {
  string participant = 1;
  string message = 2;
  int64 timestamp = 3;  // Logical time (Lamport timestamp)
}

// Participant info
message Participant {
  string name = 1;
  int64 timestamp = 2;  // Logical time (Lamport timestamp)
}

// Response to Join/Leave chat
message JoinLeaveResponse {
  string message = 1;
  int64 timestamp = 2;  // Logical time (Lamport timestamp)
}

// Empty message
message Empty {}
